@@ -1,12 +1,12 @@
-// Copyright 2020-2022 The Defold Foundation
+// Copyright 2020-2025 The Defold Foundation
 // Copyright 2014-2020 King
 // Copyright 2009-2014 Ragnar Svensson, Christian Murray
 // Licensed under the Defold License version 1.0 (the "License"); you may not use
 // this file except in compliance with the License.
-// 
+//
 // You may obtain a copy of the License, together with FAQs at
 // https://www.defold.com/license
-// 
+//
 // Unless required by applicable law or agreed to in writing, software distributed
 // under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
 // CONDITIONS OF ANY KIND, either express or implied. See the License for the
@@ -15,14 +15,13 @@
 package com.dynamo.bob.test;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.assertNotNull;
 
 import com.dynamo.bob.CompileExceptionError;
 import com.dynamo.bob.MultipleCompileException;
 import com.dynamo.bob.Project;
 import com.dynamo.bob.util.BobProjectProperties;
 import com.dynamo.bob.fs.DefaultFileSystem;
+import com.dynamo.bob.util.FileUtil;
 
 import java.nio.file.Files;
 import java.io.File;
@@ -84,11 +83,11 @@ public class BobProjectPropertiesTest {
         BobProjectProperties properties = createProperties();
 
         assertEquals(false, properties.getBooleanValue("html5", "doesn't_exist", false));
-        assertEquals(new Integer(834), properties.getIntValue("html5", "doesn't_exist", 834));
+        assertEquals(Integer.valueOf(834), properties.getIntValue("html5", "doesn't_exist", 834));
 
         assertEquals(false, properties.getBooleanValue("display", "fullscreen"));
         assertEquals(true, properties.getBooleanValue("sound", "use_thread"));
-        assertEquals(new Integer(960), properties.getIntValue("display", "width"));
+        assertEquals(Integer.valueOf(960), properties.getIntValue("display", "width"));
     }
 
     @Test
@@ -120,7 +119,7 @@ public class BobProjectPropertiesTest {
 
     private String createFile(String root, String name, String content) throws IOException {
         File file = new File(root, name);
-        file.deleteOnExit();
+        FileUtil.deleteOnExit(file);
         FileUtils.copyInputStreamToFile(new ByteArrayInputStream(content.getBytes()), file);
         return file.getAbsolutePath();
     }
