@@ -1,12 +1,12 @@
-// Copyright 2020-2022 The Defold Foundation
+// Copyright 2020-2025 The Defold Foundation
 // Copyright 2014-2020 King
 // Copyright 2009-2014 Ragnar Svensson, Christian Murray
 // Licensed under the Defold License version 1.0 (the "License"); you may not use
 // this file except in compliance with the License.
-// 
+//
 // You may obtain a copy of the License, together with FAQs at
 // https://www.defold.com/license
-// 
+//
 // Unless required by applicable law or agreed to in writing, software distributed
 // under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
 // CONDITIONS OF ANY KIND, either express or implied. See the License for the
@@ -32,6 +32,7 @@ import java.awt.font.GlyphVector;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.FlatteningPathIterator;
 import java.awt.geom.PathIterator;
+import java.awt.geom.Rectangle2D;
 import java.awt.image.BufferedImage;
 import java.awt.image.ColorModel;
 import java.awt.image.ConvolveOp;
@@ -52,48 +53,37 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.TreeSet;
+import java.util.Set;
 
 import javax.imageio.ImageIO;
 
 import org.apache.commons.io.FilenameUtils;
 import com.sun.jna.Pointer;
 
-import com.dynamo.bob.TexcLibrary;
-import com.dynamo.bob.TexcLibrary.PixelFormat;
-import com.dynamo.bob.TexcLibrary.CompressionLevel;
-import com.dynamo.bob.TexcLibrary.CompressionType;
+import com.dynamo.bob.pipeline.Texc;
+import com.dynamo.bob.pipeline.TexcLibraryJni;
 
+import com.dynamo.bob.pipeline.BuilderUtil;
 import com.dynamo.bob.pipeline.TextureGeneratorException;
 
+import com.dynamo.bob.util.StringUtil;
+import com.dynamo.bob.util.MurmurHash;
 import com.dynamo.bob.font.BMFont.BMFontFormatException;
 import com.dynamo.bob.font.BMFont.Char;
 import com.dynamo.render.proto.Font.FontDesc;
 import com.dynamo.render.proto.Font.FontMap;
+import com.dynamo.render.proto.Font.GlyphBank;
 import com.dynamo.render.proto.Font.FontTextureFormat;
 import com.dynamo.render.proto.Font.FontRenderMode;
 import com.google.protobuf.ByteString;
 import com.google.protobuf.TextFormat;
+import org.apache.commons.lang3.StringUtils;
 
-class Glyph {
-    int index;
-    int c;
-    int width;
-    int advance;
-    int leftBearing;
-    int ascent;
-    int descent;
-    int x;
-    int y;
-    int cache_entry_offset;
-    int cache_entry_size;
-    GlyphVector vector;
-    BufferedImage image;
-};
-
-class OrderComparator implements Comparator<Glyph> {
+class OrderComparator implements Comparator<Fontc.Glyph> {
     @Override
-    public int compare(Glyph o1, Glyph o2) {
-        return (new Integer(o1.index)).compareTo(o2.index);
+    public int compare(Fontc.Glyph o1, Fontc.Glyph o2) {
+        return (Integer.valueOf(o1.index)).compareTo(o2.index);
     }
 }
 
@@ -133,26 +123,102 @@ class BlendComposite implements Composite {
 
 public class Fontc {
 
+    public static final char[] ASCII_7BIT;
+    static {
+        int start = 32;
+        int end = 126;
+        ASCII_7BIT = new char[end - start + 1];
+        for (int i = start; i <= end; i++) {
+            ASCII_7BIT[i - start] = (char) i;
+        }
+    }
+
     public enum InputFontFormat {
-        FORMAT_TRUETYPE, FORMAT_BMFONT
+        FORMAT_TRUETYPE,
+        FORMAT_BMFONT
     };
+
+    public class Glyph {
+        public int           index;
+        public int           c;
+        public int           width;
+        public int           advance;
+        public int           leftBearing;
+        public int           ascent;
+        public int           descent;
+        public int           x;
+        public int           y;
+        public int           cache_entry_offset;
+        public int           cache_entry_size;
+        public GlyphVector   vector;
+        public BufferedImage image;
+    };
+
+    static final float sdf_edge         = 0.75f;
+    private InputFontFormat inputFormat = InputFontFormat.FORMAT_TRUETYPE;
+    private Stroke outlineStroke        = null;
+    private int channelCount            = 3;
+    private FontDesc fontDesc;
+    private GlyphBank.Builder glyphBankBuilder;
+
+    private ArrayList<Glyph> glyphs = new ArrayList<Glyph>();
+
+    private Font font;
+    private BMFont bmfont;
+
+    public static long FontDescToHash(FontDesc fontDesc) {
+        FontDesc.Builder fontDescbuilder = FontDesc.newBuilder();
+
+        fontDescbuilder.mergeFrom(fontDesc);
+        FontDesc desc = fontDescbuilder.build();
+
+        // the list of parameters which affect the glyph_bank
+        String result = ""
+            + desc.getFont()
+            + desc.getSize()
+            + desc.getAntialias()
+            + desc.getOutlineWidth()
+            + desc.getShadowBlur()
+            + desc.getCharacters()
+            + desc.getOutputFormat()
+            + desc.getAllChars()
+            + desc.getCacheWidth()
+            + desc.getCacheHeight()
+            + desc.getRenderMode();
+
+        return MurmurHash.hash64(result);
+    }
 
     // These values are the same as font_renderer.cpp
     static final int LAYER_FACE    = 0x1;
     static final int LAYER_OUTLINE = 0x2;
     static final int LAYER_SHADOW  = 0x4;
 
-    static final float sdf_edge = 0.75f;
+    // The fontMapLayerMask contains a bitmask of the layers that should be rendered
+    // by the font renderer. Note that this functionality requires that the render mode
+    // property of the font resource must be set to MULTI_LAYER. Default behaviour
+    // is to render the font as single layer (for compatability reasons).
+    public static int GetFontMapLayerMask(FontDesc fontDesc)
+    {
+        int fontMapLayerMask = LAYER_FACE;
 
-    private InputFontFormat inputFormat = InputFontFormat.FORMAT_TRUETYPE;
-    private Stroke outlineStroke = null;
-    private int channelCount = 3;
-    private FontDesc fontDesc;
-    private FontMap.Builder fontMapBuilder;
-    private ArrayList<Glyph> glyphs = new ArrayList<Glyph>();
+        if (fontDesc.getRenderMode() == FontRenderMode.MODE_MULTI_LAYER)
+        {
+            if (fontDesc.getOutlineAlpha() > 0 &&
+                fontDesc.getOutlineWidth() > 0)
+            {
+                fontMapLayerMask |= LAYER_OUTLINE;
+            }
 
-    private Font font;
-    private BMFont bmfont;
+            if (fontDesc.getShadowAlpha() > 0 &&
+                fontDesc.getAlpha() > 0)
+            {
+                fontMapLayerMask |= LAYER_SHADOW;
+            }
+        }
+
+        return fontMapLayerMask;
+    }
 
     public interface FontResourceResolver {
         public InputStream getResource(String resourceName) throws FileNotFoundException;
@@ -162,8 +228,16 @@ public class Fontc {
 
     }
 
-    public InputFontFormat getInputFormat() {
-        return inputFormat;
+    public ArrayList<Glyph> getGlyphs() {
+        return glyphs;
+    }
+
+    public GlyphBank getGlyphBank() {
+        return glyphBankBuilder.build();
+    }
+
+    private boolean isBitmapFont(FontDesc fd) {
+        return StringUtil.toLowerCase(fd.getFont()).endsWith("fnt");
     }
 
     public void TTFBuilder(InputStream fontStream) throws FontFormatException, IOException {
@@ -172,19 +246,26 @@ public class Fontc {
 
         if (!fontDesc.getAllChars()) {
 
-            // 7-bit ASCII. Note inclusive range [32,126]
-            for (int i = 32; i <= 126; ++i) {
-                characters.add(i);
+            String chars = fontDesc.getCharacters();
+            if (!StringUtils.isEmpty(chars)) {
+                for (int i = 0; i < chars.length(); i++) {
+                    char c = chars.charAt(i);
+                    characters.add((int) c);
+                }
             }
-
-            String extraCharacters = fontDesc.getExtraCharacters();
-            for (int i = 0; i < extraCharacters.length(); i++) {
-                char c = extraCharacters.charAt(i);
-                characters.add((int)c);
+            else {
+                for (char c : ASCII_7BIT) {
+                    characters.add((int) c);
+                }
+                String extraCharacters = fontDesc.getExtraCharacters();
+                for (int i = 0; i < extraCharacters.length(); i++) {
+                    char c = extraCharacters.charAt(i);
+                    characters.add((int) c);
+                }
             }
-
         }
-
+        Set<Integer> deDup = new TreeSet<Integer>(characters);
+        characters = new ArrayList<Integer>(deDup);
 
         if (fontDesc.getOutlineWidth() > 0.0f) {
             outlineStroke = new BasicStroke(fontDesc.getOutlineWidth() * 2.0f);
@@ -236,22 +317,21 @@ public class Fontc {
             }
         }
 
-        BufferedImage image;
-        Graphics2D g;
-        image = new BufferedImage(1024, 1024, BufferedImage.TYPE_3BYTE_BGR);
-        g = image.createGraphics();
+        BufferedImage image = new BufferedImage(256, 256, BufferedImage.TYPE_3BYTE_BGR);
+        Graphics2D g        = image.createGraphics();
         g.setBackground(Color.BLACK);
         g.clearRect(0, 0, image.getWidth(), image.getHeight());
         setHighQuality(g);
 
         FontMetrics fontMetrics = g.getFontMetrics(font);
-        int maxAscent = fontMetrics.getMaxAscent();
-        int maxDescent = fontMetrics.getMaxDescent();
-        fontMapBuilder.setMaxAscent(maxAscent)
-                      .setMaxDescent(maxDescent)
-                      .setShadowX(fontDesc.getShadowX())
-                      .setShadowY(fontDesc.getShadowY());
 
+        Rectangle2D rect = fontMetrics.getMaxCharBounds(g);
+
+        glyphBankBuilder.setMaxAscent(fontMetrics.getMaxAscent())
+                        .setMaxDescent(fontMetrics.getMaxDescent())
+                        .setMaxAdvance(fontMetrics.getMaxAdvance())
+                        .setMaxWidth((float)rect.getWidth())
+                        .setMaxHeight((float)rect.getHeight());
     }
 
 
@@ -294,7 +374,7 @@ public class Fontc {
             glyphs.add(glyph);
         }
 
-        fontMapBuilder.setMaxAscent(maxAscent)
+        glyphBankBuilder.setMaxAscent(maxAscent)
                       .setMaxDescent(maxDescent);
     }
 
@@ -317,9 +397,10 @@ public class Fontc {
         return sdfLimitValue * (1.0f - sdf_edge) + sdf_edge;
     }
 
-    private ByteBuffer toByteArray(BufferedImage image, int width, int height, int bpp, int targetBpp) throws IOException {
+    private byte[] toByteArray(BufferedImage image, int width, int height, int bpp, int targetBpp) throws IOException {
         int dataSize = width * height * bpp;
-        ByteBuffer buffer = ByteBuffer.allocateDirect(dataSize);
+        byte[] tmp = new byte[dataSize];
+        int cursor = 0;
 
         int[] rasterData = new int[width * height * 4];
         image.getRaster().getPixels(0, 0, width, height, rasterData);
@@ -339,17 +420,30 @@ public class Fontc {
                 if (bpp > 3)
                     alpha = rasterData[i + 3];
 
-                buffer.put((byte)(red & 0xFF));
+                tmp[cursor++] = (byte)(red & 0xFF);
                 if (targetBpp > 1)
-                    buffer.put((byte)(green & 0xFF));
+                    tmp[cursor++] = (byte)(green & 0xFF);
                 if (targetBpp > 2)
-                    buffer.put((byte)(blue & 0xFF));
+                    tmp[cursor++] = (byte)(blue & 0xFF);
                 if (targetBpp > 3)
-                    buffer.put((byte)(alpha & 0xFF));
+                    tmp[cursor++] = (byte)(alpha & 0xFF);
             }
         }
-        buffer.flip(); // limit is set to current position, and position is set to zero
-        return buffer;
+        byte[] out = new byte[cursor];
+        System.arraycopy(tmp, 0, out, 0, cursor);
+        return out;
+    }
+
+    private int getPadding() {
+        if (isBitmapFont(this.fontDesc)) {
+            return 0;
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD) {
+            // The +1 is needed to give a little bit of extra padding since the spread
+            // always gets padded by the sqrt of a pixel diagonal
+            return fontDesc.getShadowBlur() + (int)(fontDesc.getOutlineWidth()) + 1;
+        } else {
+            return Math.min(4, fontDesc.getShadowBlur()) + (int)(fontDesc.getOutlineWidth());
+        }
     }
 
     public BufferedImage generateGlyphData(boolean preview, final FontResourceResolver resourceResolver) throws TextureGeneratorException, FontFormatException {
@@ -358,28 +452,19 @@ public class Fontc {
 
         // Padding is the pixel amount needed to get a good antialiasing around the glyphs, while cell padding
         // is the extra padding added to the bitmap data to avoid filtering glitches when rendered.
-        int padding = 0;
+        int padding = getPadding();
         int cell_padding = 1;
         // Spread is the maximum distance to the glyph edge.
         float sdf_spread = 0.0f;
         // Shadow_spread is the maximum distance to the glyph outline.
         float sdf_shadow_spread = 0.0f;
 
-        if (this.fontDesc.getFont().toLowerCase().endsWith("fnt"))
-        {
+        if (isBitmapFont(this.fontDesc)) {
             padding = 0;
             cell_padding = 1;
-        }
-        else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD) {
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD) {
             sdf_spread        = getPaddedSdfSpread(fontDesc.getOutlineWidth());
             sdf_shadow_spread = getPaddedSdfSpread((float)fontDesc.getShadowBlur());
-
-            // The +1 is needed to give a little bit of extra padding since the spread
-            // always gets padded by the sqrt of a pixel diagonal
-            padding = fontDesc.getShadowBlur() + (int)(fontDesc.getOutlineWidth()) + 1;
-        }
-        else {
-            padding = Math.min(4, fontDesc.getShadowBlur()) + (int)(fontDesc.getOutlineWidth());
         }
 
         Color faceColor = new Color(fontDesc.getAlpha(), 0.0f, 0.0f);
@@ -414,13 +499,10 @@ public class Fontc {
                 shadow_edge = 1.0f;
             }
 
-            fontMapBuilder.setSdfSpread(sdf_spread);
-            fontMapBuilder.setSdfOutline(outline_edge);
-            fontMapBuilder.setSdfShadow(shadow_edge);
+            glyphBankBuilder.setSdfSpread(sdf_spread);
+            glyphBankBuilder.setSdfOutline(outline_edge);
+            glyphBankBuilder.setSdfShadow(shadow_edge);
         }
-        fontMapBuilder.setAlpha(this.fontDesc.getAlpha());
-        fontMapBuilder.setOutlineAlpha(this.fontDesc.getOutlineAlpha());
-        fontMapBuilder.setShadowAlpha(this.fontDesc.getShadowAlpha());
 
         // Load external image resource for BMFont files
         BufferedImage imageBMFont = null;
@@ -443,18 +525,15 @@ public class Fontc {
             inputFormat == InputFontFormat.FORMAT_TRUETYPE) {
 
             // If font has outline or shadow, we need all three channels
-            if ((fontDesc.getOutlineWidth() > 0.0f && this.fontDesc.getOutlineAlpha() > 0.0f)
-            || (fontDesc.getShadowAlpha() > 0.0f)) {
+            if ((fontDesc.getOutlineWidth() > 0.0f && this.fontDesc.getOutlineAlpha() > 0.0f) || (fontDesc.getShadowAlpha() > 0.0f)) {
                 channelCount = 3;
             } else {
                 channelCount = 1;
             }
 
-        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_BITMAP &&
-                   inputFormat == InputFontFormat.FORMAT_BMFONT) {
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_BITMAP && inputFormat == InputFontFormat.FORMAT_BMFONT) {
             channelCount = 4;
-        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD &&
-                   inputFormat == InputFontFormat.FORMAT_TRUETYPE) {
+        } else if (fontDesc.getOutputFormat() == FontTextureFormat.TYPE_DISTANCE_FIELD && inputFormat == InputFontFormat.FORMAT_TRUETYPE) {
             // If font has shadow and blur, we'll need 3 channels. Not all platforms universally support
             // texture formats with only 2 channels (such as LUMINANCE_ALPHA)
             if (fontDesc.getShadowBlur() > 0.0f && fontDesc.getShadowAlpha() > 0.0f) {
@@ -464,12 +543,6 @@ public class Fontc {
                 channelCount = 1;
             }
         }
-
-        // The fontMapLayerMask contains a bitmask of the layers that should be rendered
-        // by the font renderer. Note that this functionality requires that the render mode
-        // property of the font resource must be set to MULTI_LAYER. Default behaviour
-        // is to render the font as single layer (for compatability reasons).
-        int fontMapLayerMask = getFontMapLayerMask();
 
         // We keep track of offset into the glyph data bank,
         // this is saved for each glyph to know where their bitmap data is stored.
@@ -502,6 +575,11 @@ public class Fontc {
             cell_max_descent = Math.max(cell_max_descent, descent);
         }
 
+        // Make sure it fits future glyphs (provided at runtime)
+        cell_max_ascent  = (int)Math.ceil(Math.max(cell_max_ascent, glyphBankBuilder.getMaxAscent()));
+        cell_max_descent = (int)Math.ceil(Math.max(cell_max_descent, glyphBankBuilder.getMaxDescent()));
+        cell_width = (int)Math.ceil(Math.max(cell_width, glyphBankBuilder.getMaxWidth()));
+
         cell_height       = cell_max_ascent + cell_max_descent + padding * 2 + cell_padding * 2;
         cell_max_ascent  += padding;
 
@@ -533,9 +611,11 @@ public class Fontc {
         int cache_rows = cache_height / cell_height;
 
         int include_glyph_count = glyphs.size();
+
         if (preview) {
             include_glyph_count = Math.min(glyphs.size(), cache_rows * cache_columns);
         }
+
         for (int i = 0; i < include_glyph_count; i++) {
 
             Glyph glyph = glyphs.get(i);
@@ -577,8 +657,9 @@ public class Fontc {
 
                 int py = 0;
                 // Get raster data from rendered glyph and store in glyph data bank
-                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x)
+                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x) {
                     paddedGlyphImage.setRGB(x, py, clearData);
+                }
                 py++;
                 for (int y = 0; y < glyphImage.getHeight(); y++, py++) {
                     int px = 0;
@@ -601,46 +682,34 @@ public class Fontc {
                     }
                     paddedGlyphImage.setRGB(px++, py, clearData);
                 }
-                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x)
-                    paddedGlyphImage.setRGB(x, 0, clearData);
+                for (int x = 0; x < paddedGlyphImage.getWidth(); ++x) {
+                    paddedGlyphImage.setRGB(x, py, clearData);
+                }
 
-                Pointer compressedTexture = null;
                 try {
                     int width = paddedGlyphImage.getWidth();
                     int height = paddedGlyphImage.getHeight();
 
-                    ByteBuffer paddedBuffer = toByteArray(paddedGlyphImage, width, height, 4, channelCount);
+                    byte[] uncompressedBytes = toByteArray(paddedGlyphImage, width, height, 4, channelCount);
 
-                    compressedTexture = TexcLibrary.TEXC_CompressBuffer(paddedBuffer, paddedBuffer.limit());
-                    int texcBufferSize = TexcLibrary.TEXC_GetTotalBufferDataSize(compressedTexture);
-                    ByteBuffer buffer = ByteBuffer.allocateDirect(texcBufferSize);
-                    TexcLibrary.TEXC_GetBufferData(compressedTexture, buffer, texcBufferSize);
+                    Texc.Buffer compressedBuffer = TexcLibraryJni.CompressBuffer(uncompressedBytes);
+                    byte[] compressedBytes = compressedBuffer.data;
 
-                    byte[] uncompressedBuffer = new byte[paddedBuffer.limit()];
-                    paddedBuffer.get(uncompressedBuffer);
+                    // If the uncompressed size is smaller we write uncompressed bytes instead
+                    // Note that when writing the uncompressed bytes we need to
+                    // also write the initial byte/flag telling the consumer if
+                    // the glyph is compressed or not.
+                    boolean useCompressed = compressedBuffer.isCompressed && compressedBytes.length < uncompressedBytes.length;
+                    byte[] bytes = useCompressed ? compressedBytes : uncompressedBytes;
 
-                    byte[] compressedBuffer = new byte[buffer.limit()];
-                    buffer.get(compressedBuffer);
-
-                    int size = uncompressedBuffer.length;
-                    int bufferSize = compressedBuffer.length;
-
-                    if (size < bufferSize)
-                    {
-                        bufferSize = size;
-                        compressedBuffer = uncompressedBuffer;
-                    }
+                    glyphDataBank.write(useCompressed ? 1 : 0); // the "header"
+                    glyphDataBank.write(bytes);
 
                     glyph.cache_entry_offset = dataOffset;
-                    glyph.cache_entry_size = compressedBuffer.length;
+                    glyph.cache_entry_size = 1 + bytes.length;
                     dataOffset += glyph.cache_entry_size;
-
-                    glyphDataBank.write(compressedBuffer);
-
                 } catch(IOException e) {
                     throw new TextureGeneratorException(String.format("Failed to generate font texture: %s", e.getMessage()));
-                } finally {
-                    TexcLibrary.TEXC_DestroyBuffer(compressedTexture);
                 }
             }
         }
@@ -653,15 +722,14 @@ public class Fontc {
         }
 
         // Start filling the rest of FontMap
-        fontMapBuilder.setGlyphPadding(cell_padding);
-        fontMapBuilder.setCacheWidth(cache_width);
-        fontMapBuilder.setCacheHeight(cache_height);
-        fontMapBuilder.setGlyphData(ByteString.copyFrom(glyphDataBank.toByteArray()));
-        fontMapBuilder.setCacheCellWidth(cell_width);
-        fontMapBuilder.setCacheCellHeight(cell_height);
-        fontMapBuilder.setGlyphChannels(channelCount);
-        fontMapBuilder.setCacheCellMaxAscent(cell_max_ascent);
-        fontMapBuilder.setLayerMask(fontMapLayerMask);
+        glyphBankBuilder.setGlyphPadding(cell_padding);
+        glyphBankBuilder.setCacheWidth(cache_width);
+        glyphBankBuilder.setCacheHeight(cache_height);
+        glyphBankBuilder.setGlyphData(ByteString.copyFrom(glyphDataBank.toByteArray()));
+        glyphBankBuilder.setCacheCellWidth(cell_width);
+        glyphBankBuilder.setCacheCellHeight(cell_height);
+        glyphBankBuilder.setGlyphChannels(channelCount);
+        glyphBankBuilder.setCacheCellMaxAscent(cell_max_ascent);
 
         BufferedImage previewImage = null;
         if (preview) {
@@ -671,10 +739,11 @@ public class Fontc {
                 throw new FontFormatException("Could not generate font preview: " + e.getMessage());
             }
         }
-
+        boolean is_monospaced = true;
+        float base_advance = include_glyph_count > 0 ? glyphs.get(0).advance : 0;
         for (int i = 0; i < include_glyph_count; i++) {
             Glyph glyph = glyphs.get(i);
-            FontMap.Glyph.Builder glyphBuilder = FontMap.Glyph.newBuilder()
+            GlyphBank.Glyph.Builder glyphBuilder = GlyphBank.Glyph.newBuilder()
                 .setCharacter(glyph.c)
                 .setWidth(glyph.width + (glyph.width > 0 ? padding * 2 : 0))
                 .setAdvance(glyph.advance)
@@ -690,9 +759,14 @@ public class Fontc {
                 glyphBuilder.setY(glyph.y);
             }
 
-            fontMapBuilder.addGlyphs(glyphBuilder);
+            glyphBankBuilder.addGlyphs(glyphBuilder);
+            if (base_advance != glyph.advance)
+            {
+                is_monospaced = false;
+            }
         }
-
+        glyphBankBuilder.setIsMonospaced(is_monospaced);
+        glyphBankBuilder.setPadding(padding);
         return previewImage;
 
     }
@@ -775,7 +849,7 @@ public class Fontc {
                 int outline_channel = (int)(255.0f * distance_to_edge_normalized);
                 outline_channel     = Math.max(0,Math.min(255,outline_channel));
 
-                float sdf_outline = fontMapBuilder.getSdfOutline();
+                float sdf_outline = glyphBankBuilder.getSdfOutline();
 
                 // This is needed to 'fill' the shadow body since
                 // we have no good way of knowing if the pixel is inside or outside
@@ -904,58 +978,31 @@ public class Fontc {
        }
     }
 
-    private int getFontMapLayerMask()
-    {
-        int fontMapLayerMask = LAYER_FACE;
-
-        if (this.fontDesc.getRenderMode() == FontRenderMode.MODE_MULTI_LAYER)
-        {
-            if (this.fontDesc.getOutlineAlpha() > 0 &&
-                this.fontDesc.getOutlineWidth() > 0)
-            {
-                fontMapLayerMask |= LAYER_OUTLINE;
-            }
-
-            if (this.fontDesc.getShadowAlpha() > 0 &&
-                this.fontDesc.getAlpha() > 0)
-            {
-                fontMapLayerMask |= LAYER_SHADOW;
-            }
-        }
-
-        return fontMapLayerMask;
-    }
-
     public BufferedImage compile(InputStream fontStream, FontDesc fontDesc, boolean preview, final FontResourceResolver resourceResolver) throws FontFormatException, TextureGeneratorException, IOException {
-        this.fontDesc = fontDesc;
-        this.fontMapBuilder = FontMap.newBuilder();
+        this.fontDesc       = fontDesc;
+        this.glyphBankBuilder = GlyphBank.newBuilder();
 
-        if (fontDesc.getFont().toLowerCase().endsWith("fnt")) {
+        if (isBitmapFont(fontDesc)) {
             FNTBuilder(fontStream);
         } else {
             TTFBuilder(fontStream);
         }
-        fontMapBuilder.setMaterial(fontDesc.getMaterial() + "c");
-        fontMapBuilder.setImageFormat(fontDesc.getOutputFormat());
 
+        glyphBankBuilder.setImageFormat(fontDesc.getOutputFormat());
         return generateGlyphData(preview, resourceResolver);
-    }
-
-    public FontMap getFontMap() {
-        return fontMapBuilder.build();
     }
 
     public BufferedImage generatePreviewImage() throws IOException {
 
         Graphics2D g;
-        BufferedImage previewImage = new BufferedImage(fontMapBuilder.getCacheWidth(), fontMapBuilder.getCacheHeight(), BufferedImage.TYPE_3BYTE_BGR);
+        BufferedImage previewImage = new BufferedImage(glyphBankBuilder.getCacheWidth(), glyphBankBuilder.getCacheHeight(), BufferedImage.TYPE_3BYTE_BGR);
         g = previewImage.createGraphics();
         g.setBackground(Color.BLACK);
         g.clearRect(0, 0, previewImage.getWidth(), previewImage.getHeight());
         setHighQuality(g);
 
-        int cache_columns = fontMapBuilder.getCacheWidth() / fontMapBuilder.getCacheCellWidth();
-        int cache_rows = fontMapBuilder.getCacheHeight() / fontMapBuilder.getCacheCellHeight();
+        int cache_columns = glyphBankBuilder.getCacheWidth() / glyphBankBuilder.getCacheCellWidth();
+        int cache_rows = glyphBankBuilder.getCacheHeight() / glyphBankBuilder.getCacheCellHeight();
 
         BufferedImage glyphImage;
         for (int i = 0; i < glyphs.size(); i++) {
@@ -969,8 +1016,8 @@ public class Fontc {
                 break;
             }
 
-            int x = col * fontMapBuilder.getCacheCellWidth();
-            int y = row * fontMapBuilder.getCacheCellHeight();
+            int x = col * glyphBankBuilder.getCacheCellWidth();
+            int y = row * glyphBankBuilder.getCacheCellHeight();
 
             glyph.x = x;
             glyph.y = y;
@@ -985,6 +1032,7 @@ public class Fontc {
         return previewImage;
     }
 
+    // run with java -cp bob.jar com.dynamo.bob.font.Fontc foobar.font foobar.fontc
     public static void main(String[] args) throws FontFormatException, TextureGeneratorException {
         try {
             System.setProperty("java.awt.headless", "true");
@@ -995,10 +1043,12 @@ public class Fontc {
 
             String basedir = ".";
             String outfile = args[1];
+
             if (args.length >= 3) {
                 basedir = args[1];
                 outfile = args[2];
             }
+
             final File fontInput = new File(args[0]);
             FileInputStream stream = new FileInputStream(fontInput);
             InputStreamReader reader = new InputStreamReader(stream);
@@ -1028,21 +1078,52 @@ public class Fontc {
             Fontc fontc = new Fontc();
             String fontInputFile = basedir + File.separator + fontDesc.getFont();
             BufferedInputStream fontInputStream = new BufferedInputStream(new FileInputStream(fontInputFile));
-            fontc.compile(fontInputStream, fontDesc, false, new FontResourceResolver() {
+            BufferedImage previewImage = fontc.compile(fontInputStream, fontDesc, false, resourceName -> {
+                Path resPath = Paths.get(fontInput.getParent(), resourceName);
+                BufferedInputStream resStream = new BufferedInputStream(new FileInputStream(resPath.toString()));
 
-                @Override
-                public InputStream getResource(String resourceName) throws FileNotFoundException {
-                    Path resPath = Paths.get(fontInput.getParent().toString(), resourceName);
-                    BufferedInputStream resStream = new BufferedInputStream(new FileInputStream(resPath.toString()));
-
-                    return resStream;
-                }
+                return resStream;
             });
             fontInputStream.close();
 
+            if (previewImage != null) {
+                ImageIO.write(previewImage, "png", new File(outfile + "_preview.png"));
+            }
+
+            // Write glyph bank next to the output .fontc file
+            String glyphBankOutputPath             = outfile.replace(".fontc", ".glyph_bankc");
+            FileOutputStream glyphBankOutputStream = new FileOutputStream(glyphBankOutputPath);
+            fontc.getGlyphBank().writeTo(glyphBankOutputStream);
+
+            // Construct the project-relative path based from the input font file
+            Path basedirAbsolutePath   = Paths.get(basedir).toAbsolutePath();
+            Path glyphBankProjectPath  = Paths.get(fontInput.getAbsolutePath().replace(".font", ".glyph_bankc"));
+            Path glyphBankRelativePath = basedirAbsolutePath.relativize(glyphBankProjectPath);
+            String glyphBankProjectStr = "/" + glyphBankRelativePath.toString().replace("\\","/");
+
             // Write fontmap file
             FileOutputStream fontMapOutputStream = new FileOutputStream(outfile);
-            fontc.getFontMap().writeTo(fontMapOutputStream);
+
+            FontMap.Builder fontMapBuilder = FontMap.newBuilder();
+            fontMapBuilder.setMaterial(BuilderUtil.replaceExt(fontDesc.getMaterial(), ".material", ".materialc"));
+            fontMapBuilder.setGlyphBank(glyphBankProjectStr);
+
+            fontMapBuilder.setSize(fontDesc.getSize());
+            fontMapBuilder.setAntialias(fontDesc.getAntialias());
+            fontMapBuilder.setShadowX(fontDesc.getShadowX());
+            fontMapBuilder.setShadowY(fontDesc.getShadowY());
+            fontMapBuilder.setShadowBlur(fontDesc.getShadowBlur());
+            fontMapBuilder.setShadowAlpha(fontDesc.getShadowAlpha());
+            fontMapBuilder.setAlpha(fontDesc.getAlpha());
+            fontMapBuilder.setOutlineAlpha(fontDesc.getOutlineAlpha());
+            fontMapBuilder.setOutlineWidth(fontDesc.getOutlineWidth());
+            fontMapBuilder.setLayerMask(GetFontMapLayerMask(fontDesc));
+
+            fontMapBuilder.setOutputFormat(fontDesc.getOutputFormat());
+            fontMapBuilder.setRenderMode(fontDesc.getRenderMode());
+
+            fontMapBuilder.build().writeTo(fontMapOutputStream);
+
             fontMapOutputStream.close();
 
         } catch (IOException e) {
